--- a/index.html
+++ b/index.html
@@ -1,13 +1,75 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<style>
+  body{
+    background-image: url(backgroud.jpg);
+  background-size: contain 100%;
+  background-repeat: no-repeat;
+
+  }
+  h1{
+    color: cornsilk;
+    text-align: center;
+  }
+
+.container{
+  max-width: 500px;
+margin: 0 auto;
+}
+
+.card{
+visibility: hidden;
+ background-color: rgba(51, 31, 71, 0.4) !important;
+
+margin: 0 auto;
+
+}
+@media (min-width:200px) and (max-width:600px) {
+
+  .container{
+  max-width: 250px;
+  min-width: 100px;
+  }
+}
+  
+</style>
+  <title>Weather APP</title>
+</head>
+<body>
+  <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
+  <div>
+    <h1 class="m-2">Check Weather</h1>
+  </div>
+ <div class="container">
+  <div class="input-group mb-3 shadow">
+    <input type="text" class="form-control" placeholder="Enter City name" aria-label="Recipient's username" aria-describedby="button-addon2">
+    <button class="border border-light btn btn-outline-info" type="submit" id="button-addon2"><img style="width: 20px;" src="/home/h-m-qasim/Downloads/Weather-App-JS-main/images/search.png" alt=""></button>
+  </div>
+</div>
+<div class="card  pt-0 shadow p-3 mb-5 bg-body-tertiary rounded " style="width: 18rem  ;background-color: ; ">
+  <img class="weather-image"  src="/home/h-m-qasim/Downloads/Weather-App-JS-main/images/rain1.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <span class="temp"> </span>
+    <span class="city" >italy </span>
+<div class="more-detail  container text-center">
+  <div class="row row-3 cols-2 row-gap-3">
+    <div class="col"><img src="/home/h-m-qasim/Downloads/Weather-App-JS-main/images/humidity.png" alt="">
+     </div>
+     <div class="col"> <span class="humidity" style="color: aliceblue;font-weight: bold;"></span></div>
+     <div class="col"><img src="/home/h-m-qasim/Downloads/Weather-App-JS-main/images/wind.png" alt="">
+     </div>
+     <div class="col"> <span class="wind" style="color: aliceblue;font-weight: bold;place-self: center ; text-align: center;"></span></div>
+   
+  </div>
+</div>
+</div>
+  </div>
+</div>
+  <script src="app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
 </html>
