FINAL WEATHER APP

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ margin: 0 auto;
 }
 
 .card{
-/* visibility: hidden; */
+visibility: hidden;
  background-color: rgba(51, 31, 71, 0.4) !important;
 
 margin: 0 auto;
